Don't invalidate paint on background image change if it's obscured

BUG=622368
TEST=fast/repaint/obscured-background-no-repaint.html

Review-Url: https://codereview.chromium.org/2229643002
Cr-Commit-Position: refs/heads/master@{#411337}

Former-commit-id: 3646f9d8a418eabf1e7d8cb29ca446382848e04c